hphp/hack/test/typecheck/noreturn_usage_2.php.exp
File "noreturn_usage_2.php", line 8, characters 7-9:
You are using the return value of a noreturn function (Typing[4133])
File "noreturn_usage_2.php", line 3, characters 15-22:
A noreturn function always throws or exits
