hphp/hack/test/typecheck/noreturn_usage_2.php
<?hh // strict

function n(): noreturn {
  throw new Exception('nope');
}

function test(): void {
  if (n()) {
  }
}
